Изменение поведения синхронизации между устройствами и пользвоателями, передача прав при отключении владельцем.
